src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Available_Billing_Date__c</fullName>
        <description>Date at which the donor can be charged. e.g. Grant provisionally awarded on 1st June but activities cannot begin until funds become available for charging on 16th June.</description>
        <inlineHelpText>Date at which the donor can be charged. e.g. Grant provisionally awarded on 1st June but activities cannot begin until funds become available for charging on 16th June.</inlineHelpText>
        <label>Available Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Awarded_Grant_End_Date__c</fullName>
        <description>Date grant related projects/programs begin. Grant may be won in June but related activities do not begin until July.</description>
        <inlineHelpText>Date grant related projects/programs begin. Grant may be won in June but related activities do not begin until July.</inlineHelpText>
        <label>Awarded Grant End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Awarded_Grant_Start_Date__c</fullName>
        <description>Date grant related projects/programs end.</description>
        <inlineHelpText>Date grant related projects/programs end.</inlineHelpText>
        <label>Awarded Grant Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Amount__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of the amounts you are likely to close per your Giving Stage configuration.</description>
        <inlineHelpText>Aggregated sum of the amounts you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10,  MIN(150, rC_Giving__Best_Case_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Best_Case_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Best_Case_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Best_Case_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Best_Case_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of Giving transaction dollars you are likely to close per your Giving Stage configuration.</inlineHelpText>
        <label>Best Case Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Calculated_Giving_Type__c</fullName>
        <description>Giving Type determined by roundCause rules for the specified giving type engine.</description>
        <inlineHelpText>Giving Type determined by roundCause rules for the specified giving type engine.</inlineHelpText>
        <label>Calculated Giving Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Channel__c</fullName>
        <description>Automatically set to the related Campaign Channel value. This functionality can be controlled by custom setting.</description>
        <inlineHelpText>Defines a value which is automatically set to the related Campaign Channel value.</inlineHelpText>
        <label>Campaign Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Response_Mechanism__c</fullName>
        <description>Formula field indicating how Campaign response is expected to come in.</description>
        <formula>TEXT(Campaign.rC_Giving__Response_Mechanism__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How Campaign response is expected to come in.</inlineHelpText>
        <label>Campaign: Response Mechanism</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Rollup_Giving_Age__c</fullName>
        <formula>MAX(0, LastModifiedDate - BLANKVALUE(Campaign.rC_Giving__Rollup_Giving__c, NOW()))</formula>
        <label>Campaign: Rollup Giving Age</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Source_Code__c</fullName>
        <description>Formula field displaying the &quot;Source Code&quot; of Campaign as generated by rules defined in the Source Codes configuration.</description>
        <formula>Campaign.rC_Giving__Source_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Source Code of Campaign as generated by rules defined in the Source Codes configuration.</inlineHelpText>
        <label>Campaign: Source Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Campaign_Support_Designation__c</fullName>
        <description>Formula field from Campaign object reflecting general designation where pledge or funds are to be applied.</description>
        <formula>TEXT(Campaign.rC_Giving__Support_Designation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>General designation where pledge or funds are to be applied.</inlineHelpText>
        <label>Campaign: Support Designation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Charitable_Deduction__c</fullName>
        <description>Calculated Charitable Deduction for Planned Giving.</description>
        <inlineHelpText>Calculated Charitable Deduction for Planned Giving.</inlineHelpText>
        <label>Charitable Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Check_Date__c</fullName>
        <description>Auto populated check date used to pay a Giving Transaction.</description>
        <inlineHelpText>Check Date used to pay a Giving Transaction.</inlineHelpText>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Check_Number__c</fullName>
        <description>Automatically populated check number used to pay a Giving Transaction.</description>
        <inlineHelpText>Check number used to pay a Giving Transaction.</inlineHelpText>
        <label>Check #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Close_Date_Time__c</fullName>
        <description>Populated by trigger, indicates the close date and time of the Giving record.</description>
        <inlineHelpText>Close date and time of the Giving record.</inlineHelpText>
        <label>Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Amount__c</fullName>
        <description>Includes amounts for completed transactions. See the Giving Stage configuration for more details.</description>
        <inlineHelpText>Includes amounts for completed transactions. See the Giving Stage configuration for more details.</inlineHelpText>
        <label>Closed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Bar__c</fullName>
        <description>Formula field providing the percentage of completed transactions related to this Giving record.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10,  MIN(150, rC_Giving__Closed_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Closed_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Closed_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of completed transactions related to this Giving record.</inlineHelpText>
        <label>Closed Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Lost_Reason__c</fullName>
        <description>Reason the Giving is listed Closed Lost.</description>
        <inlineHelpText>Reason the Giving is listed Closed Lost.</inlineHelpText>
        <label>Closed Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Budget Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ratings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Closed_Ratio__c</fullName>
        <description>Formula field providing the percentage of completed transactions related to this Giving record.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Closed_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of completed transactions related to this Giving record.</inlineHelpText>
        <label>Closed Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Comments__c</fullName>
        <description>Holds Comments related to Tribute information on a Giving record.</description>
        <inlineHelpText>Holds Comments related to Tribute information on a Giving record.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Amount__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of Giving Transactions  you are confident about closing.</description>
        <inlineHelpText>Aggregated sum of the Giving Transactions you are confident about closing.</inlineHelpText>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving Transactions you are confident about closing.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10,  MIN(150, rC_Giving__Commit_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Commit_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Commit_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Giving Transactions you are confident about closing.</inlineHelpText>
        <label>Commit Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Commit_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving Transactions you are confident about closing.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Commit_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of Giving Transactions you are confident about closing.</inlineHelpText>
        <label>Commit Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Concept_Paper_Deadline__c</fullName>
        <description>Deadline for submitting required concept docs to donor. e.g. planned activities, scope and impact, competitive edge.</description>
        <inlineHelpText>Deadline for submitting required concept docs to donor. e.g. planned activities, scope and impact, competitive edge.</inlineHelpText>
        <label>Concept Paper Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Contract_Number__c</fullName>
        <description>Internal reference of the signed contract with donor.</description>
        <inlineHelpText>Internal reference of the signed contract with donor.</inlineHelpText>
        <label>Contract #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Contract_Status__c</fullName>
        <description>Status of the Grant Contract.</description>
        <inlineHelpText>Status of the Grant Contract.</inlineHelpText>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Amount__c</fullName>
        <description>Automatically populated, this field shows the sum of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</description>
        <inlineHelpText>Sum of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</inlineHelpText>
        <label>Current Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Bar__c</fullName>
        <description>Automatically populated, this field shows the percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</description>
        <formula>IF(rC_Giving__Current_Giving_Divergence__c &gt;= 0, IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Current_Giving_Divergence__c)) + &apos; &apos; + TEXT(rC_Giving__Current_Giving_Divergence__c) + &apos;% over expected&apos;, IF(rC_Giving__Current_Giving_Divergence__c &gt; -25, IMAGE(&apos;/img/samples/color_yellow.gif&apos;, &apos;yellow&apos;, 10, MIN(150, ABS(rC_Giving__Current_Giving_Divergence__c))) + &apos; &apos; + TEXT(ABS(rC_Giving__Current_Giving_Divergence__c)) + &apos;% less than expected&apos;, IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10, MIN(150, ABS(rC_Giving__Current_Giving_Divergence__c))) + &apos; &apos; + TEXT(ABS(rC_Giving__Current_Giving_Divergence__c)) + &apos;% less than expected&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</inlineHelpText>
        <label>Current Giving Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Divergence__c</fullName>
        <description>Formula field providing the divergence of the &quot;Current Giving Amount&quot; from the &quot;Expected Giving Amount.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, CEILING(100 * (BLANKVALUE(rC_Giving__Current_Giving_Amount__c, 0) - rC_Giving__Expected_Giving_Amount__c) / rC_Giving__Expected_Giving_Amount__c))</formula>
        <inlineHelpText>Divergence of the &quot;Current Giving Amount&quot; from the &quot;Expected Giving Amount.</inlineHelpText>
        <label>Current Giving Divergence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Giving_Ratio__c</fullName>
        <description>Automatically populated, this field shows the percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Projected_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Current_Giving_Amount__c, 0) / rC_Giving__Projected_Amount__c)))</formula>
        <inlineHelpText>Percentage of all Giving Transaction amounts assigned with a current category per your giving stage configuration.</inlineHelpText>
        <label>Current Giving Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Direct_Debit_Customer_Code__c</fullName>
        <description>Stores the customer code received from iATS payment processor after creation of Direct Debit recurring payment.</description>
        <inlineHelpText>Stores the customer code received from iATS payment processor after creation of Direct Debit recurring payment.</inlineHelpText>
        <label>Direct Debit Customer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Discount_Rate_Month__c</fullName>
        <description>Month in which latest Discount Rate was populated.</description>
        <inlineHelpText>Month in which latest Discount Rate was populated.</inlineHelpText>
        <label>Discount Rate Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Discount_Rate_Year__c</fullName>
        <description>Year in which latest Discount Rate was populated.</description>
        <inlineHelpText>Year in which latest Discount Rate was populated.</inlineHelpText>
        <label>Discount Rate Year</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Discount_Rate__c</fullName>
        <description>Manually populated, this field indicates an interest rate a central bank charges depository institutions that borrow reserves from it.</description>
        <inlineHelpText>Interest rate a central bank charges depository institutions that borrow reserves from it.</inlineHelpText>
        <label>Discount Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Effective_Giving_Type_Date__c</fullName>
        <description>Formula field providing the &quot;Effective Giving Type Date&quot;.</description>
        <formula>IF(NOT(rC_Giving__Is_Giving__c), CloseDate,
IF(Not($Setup.rC_Giving__Giving_Level_Setting__c.rC_Giving__Active_Only_On_Payment__c), CloseDate,
IF(NOT(ISBLANK(rC_Giving__First_Closed_Payment_Date__c)), rC_Giving__First_Closed_Payment_Date__c,
IF(ISBLANK(rC_Giving__Summary__r.rC_Giving__Giving_Level__c), CloseDate,
IF(NOT(ISBLANK(rC_Giving__Summary__r.rC_Giving__Giving_Level_Active_Date__c)), rC_Giving__Summary__r.rC_Giving__Giving_Level_Active_Date__c + 1,
rC_Giving__Summary__r.rC_Giving__Giving_Level_Pending_Date__c)))))</formula>
        <inlineHelpText>Formula field providing the &quot;Effective Giving Type Date.</inlineHelpText>
        <label>Effective Giving Type Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Enrollment_Start_Date__c</fullName>
        <description>Manually populated field on a Grant record indicating when an Awardee may enroll in  grant program.</description>
        <inlineHelpText>On a Grant record, indicates when an Awardee may enroll in a grant program.</inlineHelpText>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Entered_Giving_Amount__c</fullName>
        <description>When multicurrency is enabled, this is the original non-USD giving amount.</description>
        <inlineHelpText>When multicurrency is enabled, this is the original non-USD giving amount.</inlineHelpText>
        <label>Entered Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Entered_Giving_Currency_Rate__c</fullName>
        <description>When multicurrency is enabled, this is the original non-USD giving currency rate.</description>
        <inlineHelpText>When multicurrency is enabled, this is the original non-USD giving currency rate.</inlineHelpText>
        <label>Entered Giving Currency Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Entered_Giving_Currency__c</fullName>
        <description>When multicurrency is enabled, this is the original non-USD giving currency code.</description>
        <inlineHelpText>When multicurrency is enabled, this is the original non-USD giving currency code.</inlineHelpText>
        <label>Entered Giving Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Amount__c</fullName>
        <description>Populated by trigger, displays the sum of all Expected Giving Amounts.</description>
        <inlineHelpText>Sum of all Expected Giving Amounts.</inlineHelpText>
        <label>Expected Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Bar__c</fullName>
        <description>Populated by trigger, displays the percentage of all Expected Giving Amounts.</description>
        <formula>IMAGE(&apos;/img/samples/color_green.gif&apos;, &apos;green&apos;, 10, MIN(150, rC_Giving__Expected_Giving_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Expected_Giving_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Expected_Giving_Ratio__c) + &apos;% of projected&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated by trigger, displays the percentage of all Expected Giving Amounts.</inlineHelpText>
        <label>Expected Giving Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Expected_Giving_Ratio__c</fullName>
        <description>Populated by trigger, displays the percentage of all Expected Giving Amounts.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Projected_Amount__c, 0) == 0, 100, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) / rC_Giving__Projected_Amount__c)))</formula>
        <inlineHelpText>Percentage of all Expected Giving Amounts.</inlineHelpText>
        <label>Expected Giving Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__External_ID__c</fullName>
        <description>Field used by the Batch Upload Matching process. The field is not External or Unique in Salesforce terms.</description>
        <inlineHelpText>@Deprecated(Version=2.12)</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Fees_Commissions__c</fullName>
        <description>Fees and/or Commissions exacted by the broker, for example, that reduce the &apos;Realized Amount&apos; of the donation.</description>
        <inlineHelpText>Fees and/or Commissions exacted by the broker, for example, that reduce the &apos;Realized Amount&apos; of the donation.</inlineHelpText>
        <label>Fees &amp; Commissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Fill_Rate__c</fullName>
        <label>Fill Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Closed_Payment_Date__c</fullName>
        <description>Populated by trigger, Internal field used in calculation of active date on summary.</description>
        <inlineHelpText>Internal field used in calculation of active date on summary.</inlineHelpText>
        <label>First Closed Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__First_Payment_Date__c</fullName>
        <description>Populated by trigger, internal field used in calculation of pending  date on summary.</description>
        <inlineHelpText>Internal field used in calculation of pending  date on summary.</inlineHelpText>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This value is copied from associated Campaign at gift creation, and can be manually changed if necessary. If the gift should be split across more than one General Accounting Unit - use the Special Allocations related list to specify the split.</description>
        <inlineHelpText>This value is copied from associated Campaign at gift creation, and can be manually changed if necessary. If the gift should be split across more than one General Accounting Unit - use the Special Allocations related list to specify the split.</inlineHelpText>
        <label>General Accounting Unit</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__GL_Batch_Number__c</fullName>
        <description>General Ledger batch associated to this Pledge or Transaction.</description>
        <inlineHelpText>General Ledger batch associated to this Pledge or Transaction.</inlineHelpText>
        <label>GL Batch Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Amount__c</fullName>
        <description>Manually populated, this field indicates the amount to pledged.</description>
        <inlineHelpText>Amount to pledged.</inlineHelpText>
        <label>Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_End_Date__c</fullName>
        <description>Used in Giving Tree as a filter.</description>
        <inlineHelpText>Used in Giving Tree as a filter.</inlineHelpText>
        <label>Giving End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Frequency__c</fullName>
        <description>Frequency that Giving Amount is pledged to be given (Giving Frequency of Quarterly and Giving Amount of $25 means that $100 is pledged)</description>
        <inlineHelpText>Frequency that Giving Amount is pledged to be given (Giving Frequency of Quarterly and Giving Amount of $25 means that $100 is pledged)</inlineHelpText>
        <label>Giving Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregular</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Level_ID__c</fullName>
        <description>Populated by formula, this field displays the Current qualifying Giving Level.</description>
        <formula>rC_Giving__Summary__r.rC_Giving__Giving_Level__c</formula>
        <inlineHelpText>Current qualifying Giving Level.</inlineHelpText>
        <label>Giving Level ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Level_Status__c</fullName>
        <description>Populated by Formula, this field reflects the status of meeting the current Giving Level.</description>
        <formula>TEXT(rC_Giving__Summary__r.rC_Giving__Giving_Level_Status__c)</formula>
        <inlineHelpText>Status of meeting the current Giving Level.</inlineHelpText>
        <label>Giving Level Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Number__c</fullName>
        <description>Number of Giving record used as unique identifier.</description>
        <inlineHelpText>Number of Giving record used as unique identifier.</inlineHelpText>
        <label>Giving #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>